// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render empty button correctly 1`] = `
<DocumentFragment>
  <button
    class="coop-btn"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button should support all sizes 1`] = `
<DocumentFragment>
  <div>
    <button
      class="coop-btn coop-btn--small"
      data-testid="button-small"
      type="button"
    >
      Small
    </button>
    <button
      class="coop-btn"
      type="button"
    >
      Default/Medium
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button should support all variants 1`] = `
<DocumentFragment>
  <div>
    <button
      class="coop-btn"
      type="button"
    >
      Default
    </button>
    <button
      class="coop-btn coop-btn--primary"
      data-testid="button-primary"
      type="button"
    >
      Primary
    </button>
    <button
      class="coop-btn coop-btn--white"
      data-testid="button-white"
      type="button"
    >
      White
    </button>
    <button
      class="coop-btn coop-btn--grey"
      data-testid="button-grey"
      type="button"
    >
      Grey
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button should support full width buttons 1`] = `
<DocumentFragment>
  <button
    class="coop-btn coop-btn--full-width"
    type="button"
  >
    Full width button
  </button>
</DocumentFragment>
`;

exports[`Button should support loading state button prop 1`] = `
<DocumentFragment>
  <button
    class="coop-btn coop-btn--loading"
    type="button"
  >
    Button is loading
  </button>
</DocumentFragment>
`;
